# demo-crm

./: .env  Cargo.toml  README.md
src/: main.rs  variables.rs
src/database/: mod.rs
src/database/entities/: user.rs
