[package]
name = "demo-crm"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.0"
actix-cors = "0.6.1"
mongodb = { version = "2.3.1", features = ["tokio-runtime"], default-features = false }

once_cell = "1.4.1"
lazy_static = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }

tokio = "1.15.0"
async-trait = "0.1.57"